# LitterGUI

./: CMakeLists.txt  LItterGUI.cpp  LitterGUI.h  LitterGUI.sln  LitterGUI.vcxproj  LitterGUI.vcxproj.filters  LitterGUI_port.cpp  main.cpp
LitterGUI/x64/Debug/: LitterGUI.exe.recipe  LitterGUI.ilk  vc143.idb
LitterGUI/x64/Debug/LitterGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LitterGUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: litterGUI.h
src/: main.c
